k8s/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: demo
 annotations:
   kubernetes.io/ingress.class: kong
   konghq.com/plugins: kong-basic-auth
   konghq.com/override: "sample-customization"
spec:
 rules:
 - http:
     paths:
     - path: /alec
       backend:
         serviceName: echo
         servicePort: 80
