k8s/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress2
 annotations:
   kubernetes.io/ingress.class: kong
   konghq.com/plugins: kong-basic-auth
   konghq.com/override: "sample-customization"
spec:
 rules:
 - http:
     paths:
     - path: /route2
       backend:
         serviceName: service2
         servicePort: 80
